# vlm_project

./: .gitignore  README.md  architecture.md  main.py  pdf_parser.py  pyproject.toml
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  worker.py
backend/app/agent/: __init__.py  cag.py  graph.py  rag.py  state.py  tag.py
backend/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  Settings.tsx  Sidebar.tsx
frontend/src/store/: useChatStore.ts
