[project]
name = "vlm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.8",
    "langchain>=1.3.7",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.50",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]
