[project]
name = "backend"
version = "0.1.0"
description = "FastAPI and LangGraph based High-Performance VLM Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic[email]>=2.7.4",
    "pydantic-settings>=2.3.3",
    "sqlalchemy>=2.0.31",
    "asyncpg>=0.29.0",
    "redis>=5.0.6",
    "rq>=1.16.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "langchain>=0.2.5",
    "langchain-core>=0.2.9",
    "langchain-community>=0.2.5",
    "langchain-openai>=0.1.8",
    "langgraph>=0.1.4",
    "chromadb>=0.5.3",
    "pandas>=2.2.2",
    "httpx>=0.27.0",
]
